--- a/contact/Stylecontact.css
+++ b/contact/Stylecontact.css
@@ -1,4 +1,33 @@
 body
 {
-    background-i: url("bg1.jpg.jpg");
+    background-image: url("bg3.jpg");
+    background-attachment: fixed;
+    background-size: cover;
+    margin: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    justify-content: center;
+
+}
+
+fieldset
+{
+    background-color: rgba(36, 142, 41, 0.24);
+
+}
+div.contact
+{
+    width: 90%;
+    border: 1px solid black;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+form
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 80px;
 }
