--- a/contact/Stylecontact.css
+++ b/contact/Stylecontact.css
@@ -56,15 +56,13 @@ label
 input, select, textarea
 {
     background-color: whitesmoke;
+    border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.24);
     padding: 5px;
     width: 80%;
     margin-left: 10%;
     margin-top: 1%;
-
-
-
 
 }
 
