--- a/CV/StyleCV.css
+++ b/CV/StyleCV.css
@@ -106,10 +106,40 @@ a{color: white;}
 div.tout 
     {
         display: grid:;
-        grid-template-areas: "entete"
+        grid-template-areas: "menu"
+        "entete"
                             "principale"
                             "lateral"
                             "pied";
         grid-template-columns: 100%;
     }
 }
+.menu
+{
+    background-color: rgba(245, 245, 245, 0.77);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: 5px;
+    column-gap: 30px;
+    height: 100%;
+    min-height: 50px;
+    align-items: center;
+    padding:5px;
+}
+
+
+.content
+{
+    background-color: rgba(169, 169, 169, 0.29);
+    border: 1px solid black;
+    border-radius: 4px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    text-align: center;
+    flex-basis: 20%;
+}
+a{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    font-size: large;}
