--- a/StyleMenu.css
+++ b/StyleMenu.css
@@ -1,9 +1,148 @@
 body
 {
-    background-image: url(bg1.jpg);
+    background-image: url("bg1.jpg");
     background-attachment: fixed;
     background-size: cover;
+    width: auto;
 
 }
 
+.menu{grid-area: menu; background-color: rgba(240, 241, 237, 0);}
+.page{grid-area: page;background-color: rgba(165, 42, 42, 0);}
+
+.tout
+{
+    display: grid;
+    grid-template-areas: "menu menu"
+
+                        "page page";
+
+}
+
+.image{grid-area: image;background-color: rgba(165, 42, 42, 0);}
+.text{grid-area: text;background-color: rgba(165, 42, 42, 0);}
+.cercle{grid-area: cercle;background-color: rgba(165, 42, 42, 0);}
+
+div.page
+{
+    display: grid;
+    grid-template-areas: "image text"
+                        "image text"
+
+"cercle cercle";
+    grid-auto-columns: 50% 50%;
+    background-color: rgba(188, 184, 184, 0.45);
+    width: 100%;
+
+
+}
+h1
+{
+    padding: 5px;
+}
+.menu
+{
+    background-color: rgba(245, 245, 245, 0.77);
+    display: flex;
+    flex-direction: row;
+justify-content: center;
+    margin-left: 5px;
+    column-gap: 30px;
+    height: 100%;
+    min-height: 50px;
+    align-items: center;
+    padding:5px;
+}
+
+
+.content
+{
+    background-color: rgba(169, 169, 169, 0.29);
+    border: 1px solid black;
+    border-radius: 4px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    text-align: center;
+    flex-basis: 20%;
+}
+a{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
+    font-size: large;}
+
+div.text
+{
+    vertical-align: center;
+    padding-top: 20px;
+    font-size: large;
+}
+
+
+img
+{
+ width: 90%;
+    clip-path: ellipse(40% 50%);
+
+
+}
+
+.cercle
+{
+    display: flex;
+    flex-direction: row;
+    margin-left: 40%;
+    padding: 5px;
+    flex-grow: 1;
+    flex-shrink: 0;
+    width: 50%;
+
+
+}
+
+.rond1
+{
+background-color: whitesmoke;
+    padding: 10%;
+    clip-path: circle(40% at 50% 50%);
+    transition:  background-color 2s ;
+
+}
+
+.rond1:hover
+{
+    background-color: rgba(174, 163, 163, 0.63);
+}
+
+.rond2 {
+    background-color: blue;
+    padding: 10%;
+    clip-path: circle(40% at 50% 50%);
+    transition:  background-color 2s ;
+}
+.rond2:hover
+{
+    background-color: #050598;
+}
+
+.rond3 {
+    background-color: red;
+    padding: 10%;
+    clip-path: circle(39% at 50% 50%);
+    transition:  background-color 2s ;
+}
+.rond3:hover
+{
+    background-color: #700202;
+}
+
+.rond4 {
+    background-color: green;
+    padding: 10%;
+    clip-path: circle(38% at 50% 50%);
+    transition:  background-color 2s ;
+}
+.rond4:hover
+{
+    background-color: #015101;
+}
 
