--- a/CV/StyleCV.css
+++ b/CV/StyleCV.css
@@ -3,7 +3,7 @@
 header {grid-area: entete; background-color: rgba(20, 85, 122, 0.61);}
 section{grid-area: principale; background-color: rgba(234, 234, 243, 0.904);}
 aside {grid-area: lateral;background-color: rgba(5, 5, 51, 0.671);}
-footer{grid-area: pied;background-color: rgba(9, 9, 136, 0.336);border:}
+footer{grid-area: pied;background-color: rgba(20, 85, 122, 0.61);border:}
 
 div.tout
 {
@@ -13,8 +13,8 @@ div.tout
                         " principale lateral"
                         "pied pied";
     grid-template-columns: 70% 30%;
-    margin: 10px;
-    padding: 10px;
+
+
 }
 
 img
@@ -83,7 +83,7 @@ justify-items: center;
 
 ul.background
 {
-    background-color: rgba(7, 15, 61, 0.747);
+
     margin-right: 20px;
     font-style: normal;
     color: white;
@@ -95,11 +95,17 @@ p.cote
    font-style: oblique;
 }
 
+
 progress
 {
     width: 90%;
 }
-a{color: white;}
+
+
+a.visited:visited
+{color: white}
+
+a.visited{color: white}
 
 @media(max-width:600px) 
 {
@@ -120,12 +126,12 @@ div.tout
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-left: 5px;
     column-gap: 30px;
     height: 100%;
     min-height: 50px;
     align-items: center;
     padding:5px;
+    color: black;
 }
 
 
@@ -139,7 +145,8 @@ div.tout
     text-align: center;
     flex-basis: 20%;
 }
-a{
+a.menu{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     font-size: large;}
+
