--- a/StyleMenu.css
+++ b/StyleMenu.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url("bg1.jpg");
+    background-color: rgba(20, 85, 122, 0.61);
     background-attachment: fixed;
     background-size: cover;
     width: auto;
@@ -8,7 +8,7 @@ body
 }
 
 .menu{grid-area: menu; background-color: rgba(240, 241, 237, 0);}
-.page{grid-area: page;background-color: rgba(165, 42, 42, 0);}
+.page{grid-area: page;background-color: rgba(255, 255, 255, 0.76);}
 
 .tout
 {
@@ -19,9 +19,9 @@ body
 
 }
 
-.image{grid-area: image;background-color: rgba(165, 42, 42, 0);}
-.text{grid-area: text;background-color: rgba(165, 42, 42, 0);}
-.cercle{grid-area: cercle;background-color: rgba(165, 42, 42, 0);}
+.image{grid-area: image;background-color: rgba(255, 255, 255, 0);}
+.text{grid-area: text;background-color: rgba(255, 255, 255, 0);}
+.cercle{grid-area: cercle;background-color: rgba(255, 255, 255, 0);}
 
 div.page
 {
@@ -31,7 +31,7 @@ div.page
 
 "cercle cercle";
     grid-auto-columns: 50% 50%;
-    background-color: rgba(188, 184, 184, 0.45);
+    background-color: (255, 255, 255, 0.6);
     width: 100%;
 
 
@@ -46,7 +46,6 @@ h1
     display: flex;
     flex-direction: row;
 justify-content: center;
-    margin-left: 5px;
     column-gap: 30px;
     height: 100%;
     min-height: 50px;
@@ -90,11 +89,10 @@ img
 {
     display: flex;
     flex-direction: row;
-    margin-left: 40%;
-    padding: 5px;
-    flex-grow: 1;
-    flex-shrink: 0;
+    margin-left: 45%;
     width: 50%;
+    column-gap: 30px;
+    justify-content: end;
 
 
 }
