--- a/StyleMenu.css
+++ b/StyleMenu.css
@@ -4,6 +4,7 @@ body
     background-attachment: fixed;
     background-size: cover;
     width: auto;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 
@@ -31,15 +32,11 @@ div.page
 
 "cercle cercle";
     grid-auto-columns: 50% 50%;
-    background-color: (255, 255, 255, 0.6);
     width: 100%;
 
 
 }
-h1
-{
-    padding: 5px;
-}
+
 .menu
 {
     background-color: rgba(245, 245, 245, 0.77);
@@ -51,14 +48,12 @@ justify-content: center;
     min-height: 50px;
     align-items: center;
     padding:5px;
+    color: gray;
 }
 
 
 .content
 {
-    background-color: rgba(169, 169, 169, 0.29);
-    border: 1px solid black;
-    border-radius: 4px;
     padding-top: 8px;
     padding-bottom: 8px;
     text-align: center;
@@ -66,14 +61,16 @@ justify-content: center;
 }
 a{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: black;
-    font-size: large;}
+    font-size: x-large;
+text-decoration: none;
+color: gray;}
 
 div.text
 {
     vertical-align: center;
     padding-top: 20px;
     font-size: large;
+    padding-right: 15px;
 }
 
 
@@ -101,7 +98,7 @@ img
 {
 background-color: whitesmoke;
     padding: 10%;
-    clip-path: circle(40% at 50% 50%);
+    clip-path: circle(39% at 50% 50%);
     transition:  background-color 2s ;
 
 }
@@ -114,7 +111,7 @@ background-color: whitesmoke;
 .rond2 {
     background-color: blue;
     padding: 10%;
-    clip-path: circle(40% at 50% 50%);
+    clip-path: circle(42% at 50% 50%);
     transition:  background-color 2s ;
 }
 .rond2:hover
@@ -125,8 +122,9 @@ background-color: whitesmoke;
 .rond3 {
     background-color: red;
     padding: 10%;
-    clip-path: circle(39% at 50% 50%);
+    clip-path: circle(38% at 50% 50%);
     transition:  background-color 2s ;
+
 }
 .rond3:hover
 {
@@ -136,7 +134,7 @@ background-color: whitesmoke;
 .rond4 {
     background-color: green;
     padding: 10%;
-    clip-path: circle(38% at 50% 50%);
+    clip-path: circle(36% at 50% 50%);
     transition:  background-color 2s ;
 }
 .rond4:hover
@@ -144,3 +142,28 @@ background-color: whitesmoke;
     background-color: #015101;
 }
 
+
+@media(max-width:600px)
+{
+    .tout
+    {
+        display: grid;
+        grid-template-areas: "menu"
+        "page"
+        "cercle";
+        grid-template-columns: 100%;
+    }
+
+    .cercle
+    {
+        display: flex;
+        flex-direction: row;
+        margin-left: 50%;
+        width: 50%;
+        column-gap: 20px;
+        justify-content: end;
+
+
+    }
+
+}
