--- a/contact/Stylecontact.css
+++ b/contact/Stylecontact.css
@@ -18,10 +18,7 @@ body
 {display: grid;
     grid-template-areas: "menu menu" "tout tout";
 }
-h2
-{
-    margin-left: 10%;
-}
+/* Menu */
 .menu
 {
     background-color: rgba(245, 245, 245, 0.77);
@@ -30,7 +27,6 @@ h2
     justify-content: center;
     margin-left: 5px;
     column-gap: 30px;
-
     min-height: 50px;
     align-items: center;
     padding:5px;
@@ -39,18 +35,22 @@ h2
 
 .content
 {
-    background-color: rgba(169, 169, 169, 0.29);
-    border: 1px solid black;
-    border-radius: 4px;
     padding-top: 8px;
     padding-bottom: 8px;
     text-align: center;
     flex-basis: 20%;
 }
-a{
+a
+{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
-    font-size: large;}
+    font-size: x-large;
+text-decoration: none;
+    color: gray;
+}
+
+h2
+{color: gray}
 
 fieldset
 {
@@ -59,12 +59,12 @@ fieldset
     width: 100%;
     align-content: center;
     border-radius: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 div.contact
 {
     width: 90%;
-    border: 1px solid black;
     background-color: white;
     border-radius: 10px;
     padding: 10px;
