--- a/contact/Stylecontact.css
+++ b/contact/Stylecontact.css
@@ -99,7 +99,7 @@ label
 
 input, select, textarea
 {
-    background-color: whitesmoke;
+    background-color: white;
     border: 1px solid black;
     border-radius: 10px;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.24);
