--- a/CV/StyleCV.css
+++ b/CV/StyleCV.css
@@ -158,4 +158,12 @@ a.menu{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
     font-size: large;}
+img.log
+{
+    max-width: 80%;
+    margin-left: 10%;
+}
+
+html
+{background-color:rgba(245, 245, 245, 0.77)}
 
