--- a/StyleMenu.css
+++ b/StyleMenu.css
@@ -1,6 +1,6 @@
 body
 {
-    background-color: rgba(20, 85, 122, 0.61);
+    background-color: rgba(245, 245, 245, 0.77);
     background-attachment: fixed;
     background-size: cover;
     width: auto;
@@ -17,7 +17,6 @@ body
     grid-template-areas: "menu menu"
 
                         "page page";
-
 }
 
 .image{grid-area: image;background-color: rgba(255, 255, 255, 0);}
@@ -33,9 +32,10 @@ div.page
 "cercle cercle";
     grid-auto-columns: 50% 50%;
     width: 100%;
-
+    background-color: rgba(20, 85, 122, 0.61);
 
 }
+
 
 .menu
 {
@@ -65,6 +65,12 @@ a{
 text-decoration: none;
 color: gray;}
 
+img.log
+{
+    max-width: 80%;
+    margin-left: 10%;
+}
+
 div.text
 {
     vertical-align: center;
@@ -74,7 +80,7 @@ div.text
 }
 
 
-img
+img.photo
 {
  width: 90%;
     clip-path: ellipse(40% 50%);
@@ -82,6 +88,9 @@ img
 
 }
 
+
+
+/* Menu rond*/
 .cercle
 {
     display: flex;
@@ -142,6 +151,8 @@ background-color: whitesmoke;
     background-color: #015101;
 }
 
+
+/*Responsive*/
 
 @media(max-width:600px)
 {
